# LifeGame

./: .gitignore  CMakeLists.txt  README.md  diagram-activite.puml  diagram-class.puml  diagram-sequence.puml  diagram-use-case.puml  grille_test.txt  main.cpp
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml
Controller/: Controller.cpp  Controller.h
Model/Cell/: Cell.cpp  Cell.h
Model/Game/: Game.cpp  Game.h
Model/Grid/: Grid.cpp  Grid.h
Model/ObstacleCell/: ObstacleCell.cpp  ObstacleCell.h
Test/: CMakeLists.txt  TestMain.cpp  UnitTest.cpp  UnitTest.h
Test/ModelTest/: TestCell.cpp  TestGame.cpp  TestGrid.cpp
View/ConfigView/: ConfigView.cpp  ConfigView.h
View/ConsoleView/: ConsoleView.cpp  ConsoleView.h
View/GraphicView/: GraphicView.cpp  GraphicView.h
